# filc

./: .bazelrc  .clang-format  .clang-tidy  .editorconfig  .gitignore  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MODULE.bazel  README.md  SECURITY.md  commit-template  filc  main.cpp  package.json  pnpm-lock.yaml  renovate.json  result  roadmap.md  shell.nix
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml
.github/workflows/: codeql.yml  package.yml  tests.yml
.husky/: pre-commit
cmake/: ExternalAntlr4Cpp.cmake  FindANTLR.cmake  commands.cmake  packaging.cmake
doc/: release.md
fdr/: 001 - Development environment.md
include/filc/: filc.h
include/filc/grammar/: DumpVisitor.h  Parser.h  Position.h  Type.h  Visitor.h  ast.h
include/filc/grammar/array/: Array.h
include/filc/grammar/assignation/: Assignation.h
include/filc/grammar/calcul/: Calcul.h
include/filc/grammar/expression/: Expression.h
include/filc/grammar/identifier/: Identifier.h
include/filc/grammar/literal/: Literal.h
include/filc/grammar/pointer/: Pointer.h
include/filc/grammar/program/: Program.h
include/filc/grammar/variable/: Variable.h
include/filc/llvm/: CalculBuilder.h  GeneratorContext.h  IRGenerator.h
include/filc/options/: OptionsParser.h
include/filc/utils/: Message.h  utils.h
include/filc/validation/: CalculValidator.h  Environment.h  Name.h  TypeBuilder.h  ValidationVisitor.h
src/: filc.cpp
src/grammar/: DumpVisitor.cpp  FilLexer.g4  FilParser.g4  Parser.cpp  Position.cpp  Type.cpp  VisitorContext.cpp
src/grammar/array/: Array.cpp  ArrayAccess.cpp
src/grammar/assignation/: Assignation.cpp
src/grammar/calcul/: BinaryCalcul.cpp
src/grammar/expression/: Expression.cpp
src/grammar/identifier/: Identifier.cpp
src/grammar/literal/: BooleanLiteral.cpp  CharacterLiteral.cpp  FloatLiteral.cpp  IntegerLiteral.cpp  StringLiteral.cpp
src/grammar/pointer/: Pointer.cpp  PointerDereferencing.cpp  VariableAddress.cpp
src/grammar/program/: Program.cpp
src/grammar/variable/: Variable.cpp
src/llvm/: CalculBuilder.cpp  GeneratorContext.cpp  IRGenerator.cpp
src/options/: OptionsParser.cpp
src/utils/: Message.cpp  utils.cpp
src/validation/: CalculValidator.cpp  Environment.cpp  Name.cpp  TypeBuilder.cpp  ValidationContext.cpp  ValidationVisitor.cpp
tests/: CMakeLists.txt
tests/e2e/: filc.cpp  llvm_ir.cpp  memory.cpp  test.cpp  test_tools.cpp  test_tools.h
tests/unit/: FilCompilerTest.cpp  test.cpp  test_tools.cpp  test_tools.h
tests/unit/Fixtures/: .gitignore  ipsum.txt  sample.fil
tests/unit/Fixtures/validation/: assignation.fil  character.fil  float.fil  identifier.fil  invalid_program.fil  string.fil  valid_program.fil  variable.fil
tests/unit/grammar/: DumpVisitorTest.cpp  ParserTest.cpp  PositionTest.cpp  TypeTest.cpp  VisitorContextTest.cpp
tests/unit/grammar/array/: ArrayAccessTest.cpp  ArrayTest.cpp
tests/unit/grammar/assignation/: AssignationTest.cpp
tests/unit/grammar/calcul/: BinaryCalculTest.cpp
tests/unit/grammar/identifier/: IdentiferTest.cpp
tests/unit/grammar/literal/: BooleanLiteralTest.cpp  CharacterLiteralTest.cpp  FloatLiteralTest.cpp  IntegerLiteralTest.cpp  StringLiteralTest.cpp
tests/unit/grammar/pointer/: PointerDereferencingTest.cpp  PointerTest.cpp  VariableAddressTest.cpp
tests/unit/grammar/variable/: VariableDeclarationTest.cpp
tests/unit/llvm/: IRGeneratorTest.cpp
tests/unit/options/: OptionsParserTest.cpp
tests/unit/utils/: MessageTest.cpp  UtilsTest.cpp
tests/unit/validation/: CalculValidatorTest.cpp  EnvironmentTest.cpp  NameTest.cpp  TypeBuilderTest.cpp  ValidationContextTest.cpp  ValidationVisitorTest.cpp
tools/bazel/platform/: BUILD.bazel
tools/ci/: build-matrix.json  build.sh  build_and_run.sh  run_unit_tests.sh
tools/docker/: Dockerfile
tools/nix/: antlr4.nix  cxxopts.nix  default.nix  filc.nix  pin-nixpkgs.nix  pinned-bazel.nix  pinned-clang.nix  pinned-nodejs.nix  pnpm.nix
