cc_library(
    name = "filc_lib",
    srcs = glob([
        "src/*.cpp",
        "src/**/*.cpp",
    ]),
    hdrs = glob([
        "include/filc/*.h",
        "include/filc/**/*.h",
    ]),
    includes = ["include"],
)

cc_binary(
    name = "filc",
    srcs = ["main.cpp"],
    deps = ["//:filc_lib"],
)

cc_test(
    name = "unit-tests",
    srcs = glob([
        "tests/unit/*.cpp",
        "tests/unit/**/*.cpp",
    ]),
    deps = [
        "//:filc_lib",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
